Fix Style Selector button wrap issue

--- a/client/src/components/Home/home.module.css
+++ b/client/src/components/Home/home.module.css
@@ -1,5 +1,5 @@
 body, html {
   height: 100%;
-  width: 100%;
+  width: 80vw;
   margin: 0 auto;
 }
